# alt.drive

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  VALIDATION.md
crates/altdrive-core/: Cargo.toml
crates/altdrive-core/src/: lib.rs
crates/altdrive-spike-iroh/: Cargo.toml
crates/altdrive-spike-iroh/src/: main.rs
docs/: phase-0-spikes.md
docs/spike-results/: 02-irohblobs.md
scripts/: setup-iroh-spike.sh
